; ModuleID = '/home/carl/AnghaBench/kphp-kdb/photo/extr_photo-data.c_change_photo_location_server.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/photo/extr_photo-data.c_change_photo_location_server.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_photo_change_photo_location_server = type { i32, i32, i32 }

@mode = common dso_local global i32 0, align 4
@LEV_PHOTO_CHANGE_PHOTO_LOCATION_SERVER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @change_photo_location_server(i32* %0, %struct.lev_photo_change_photo_location_server* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.lev_photo_change_photo_location_server*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.lev_photo_change_photo_location_server* %1, %struct.lev_photo_change_photo_location_server** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.lev_photo_change_photo_location_server*, %struct.lev_photo_change_photo_location_server** %5, align 8
  %9 = getelementptr inbounds %struct.lev_photo_change_photo_location_server, %struct.lev_photo_change_photo_location_server* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @mode, align 4
  %12 = shl i32 %11, 16
  %13 = sub nsw i32 %10, %12
  %14 = load i32, i32* @LEV_PHOTO_CHANGE_PHOTO_LOCATION_SERVER, align 4
  %15 = sub nsw i32 %13, %14
  store i32 %15, i32* %7, align 4
  %16 = load i32*, i32** %4, align 8
  %17 = load %struct.lev_photo_change_photo_location_server*, %struct.lev_photo_change_photo_location_server** %5, align 8
  %18 = getelementptr inbounds %struct.lev_photo_change_photo_location_server, %struct.lev_photo_change_photo_location_server* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* %7, align 4
  %21 = ashr i32 %20, 1
  %22 = load i32, i32* %7, align 4
  %23 = and i32 %22, 1
  %24 = load %struct.lev_photo_change_photo_location_server*, %struct.lev_photo_change_photo_location_server** %5, align 8
  %25 = getelementptr inbounds %struct.lev_photo_change_photo_location_server, %struct.lev_photo_change_photo_location_server* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @user_change_photo_location_server(i32* %16, i32 %19, i32 %21, i32 %23, i32 %26)
  ret i32 %27
}

declare dso_local i32 @user_change_photo_location_server(i32*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
